<resources>
    <string name="app_name">ToDOApplication</string>
    <string name="todo_list_title">TODO</string>
    <string name="previous_date">이전 날짜</string>
    <string name="next_date">다음 날짜</string>
    <string name="select_date">날짜 선택</string>
    <string name="date_picker_confirm">선택</string>
    <string name="date_picker_cancel">취소</string>
    <string name="empty_todo_list">등록된 TODO가 없습니다.</string>
    <string name="todo_completion">%1$s 완료 상태</string>
    <string name="category_color_indicator">%1$s 카테고리 색상</string>
    <string name="error_todo_not_found">TODO를 찾을 수 없습니다.</string>
    <string name="error_category_not_found">카테고리 정보를 불러올 수 없습니다.</string>
    <string name="error_invalid_todo">TODO 정보가 올바르지 않습니다.</string>
    <string name="error_persistence_failure">목록을 불러오거나 변경하지 못했습니다.</string>
    <string name="error_operation_failed">요청을 처리하지 못했습니다.</string>
    <string name="add_todo">+</string>
    <string name="add_todo_description">TODO 추가</string>
    <string name="create_todo_title">TODO 등록</string>
    <string name="edit_todo_title">TODO 수정</string>
    <string name="back">뒤로</string>
    <string name="todo_title_label">제목</string>
    <string name="todo_title_required">제목을 입력해주세요.</string>
    <string name="todo_date_label">날짜</string>
    <string name="todo_time_label">시간</string>
    <string name="todo_no_time">시간 없음</string>
    <string name="todo_select_time">시간 선택</string>
    <string name="todo_clear_time">시간 제거</string>
    <string name="todo_category_label">카테고리</string>
    <string name="todo_category_required">카테고리를 선택해주세요.</string>
    <string name="save">저장</string>
    <string name="saving">저장 중</string>
    <string name="error_edit_todo_not_found">수정할 TODO를 찾을 수 없습니다.</string>
    <string name="error_edit_category_not_found">카테고리를 찾을 수 없습니다.</string>
    <string name="error_edit_invalid_todo">입력한 TODO 정보를 확인해주세요.</string>
    <string name="error_edit_persistence_failure">TODO를 저장하지 못했습니다.</string>
...
    <string name="category_move_down">한 칸 아래로 이동</string>
    <string name="category_drag">%1$s 순서 변경: 길게 누른 후 이동</string>
    <string name="error_category_order">Category 순서를 저장하지 못했습니다. 목록을 확인한 후 다시 시도해주세요.</string>
    <string name="todo_category_filter_label">Category: </string>
    <string name="filter_all">전체</string>
    <string name="filter_incomplete">미완료</string>
    <string name="empty_filtered_todo_list">조건에 해당하는 TODO가 없습니다.</string>
    <string name="todo_reminder_label">알림</string>
    <string name="reminder_one_day_before">1일 전</string>
    <string name="reminder_fifteen_minutes_before">15분 전</string>
    <string name="reminder_requires_time">시간을 지정하면 알림을 선택할 수 있습니다.</string>
    <string name="notification_permission_denied_message">알림 권한이 없어 일정만 저장되었습니다. 알림을 받으려면 앱 설정에서 권한을 허용해주세요.</string>
    <string name="error_alarm_not_scheduled">일정은 저장되었지만 알림을 예약하지 못했습니다. 저장을 다시 눌러 재시도해주세요.</string>
...
