...
import java.time.Instant
import java.time.LocalDate
import java.time.ZoneOffset
import java.time.format.DateTimeFormatter
import java.time.format.FormatStyle

const val PREVIOUS_DATE_TAG = "previous-date"
const val NEXT_DATE_TAG = "next-date"
const val SELECT_DATE_TAG = "select-date"
const val LOADING_TAG = "todo-list-loading"
const val ERROR_TAG = "todo-list-error"
const val CATEGORY_COLOR_TAG_PREFIX = "category-color-"
const val ADD_TODO_TAG = "add-todo"
const val MANAGE_CATEGORIES_TAG = "manage-categories"
...
